integ-tests/tests/snapshots/parser__require_newlines__basic2.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ basic2:1:3
  │
1 │ 0=0r0=0r=false
  │   ^^^ unable to parse number


