integ-tests/tests/snapshots/parser__require_newlines__tables.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[wanted]: 
  ┌─ tables:3:6
  │  
3 │   0="0"[[0000l0]]
  │ ╭──────^
4 │ │ 0="0"[[0000l0]]
  │ ╰───^ expected newline


